--- a/.github/workflows/standard.yaml
+++ b/.github/workflows/standard.yaml
@@ -117,7 +117,7 @@ jobs:
     with:
       operating_system: ${{ matrix.os }}
       python_version: ${{ matrix.python_version }}
-      validation_command: python -c "from PythonProjectBootstrapperTesting import __version__; print(__version__)"
+      validation_command: python -c "from PyProjTestBootstrp1 import __version__; print(__version__)"
 
   # ----------------------------------------------------------------------
   create_binary:
@@ -164,8 +164,35 @@ jobs:
     with:
       operating_system: ${{ matrix.os }}
       python_version: ${{ matrix.python_version }}
-      validation_command: PythonProjectBootstrapperTesting Version
+      validation_command: PyProjTestBootstrp1 Version
 
+
+# ----------------------------------------------------------------------
+  create_docker_image:
+    needs: validate
+
+    strategy:
+      fail-fast: false
+
+      matrix:
+        python_version:
+          - "3.12"
+          - "3.11"
+          - "3.10"
+          # - "3.9"  # Not supported
+          # - "3.8"  # Not supported
+
+    name: Create Docker Image
+
+    uses: davidbrownell/dbrownell_DevTools/.github/workflows/callable_create_docker_image.yaml@CI-v0.15.2
+    with:
+      operating_system: ubuntu-latest
+      python_version: ${{ matrix.python_version }}
+      name_suffix: -${{ matrix.python_version }}
+      bootstrap_args: ""
+      docker_description: "PyProjTestBootstrp1 - ${{ matrix.python_version }}"
+      push_image_as_package: true
+      container_registry_username: varun646
 
 
   # ----------------------------------------------------------------------
@@ -173,6 +200,8 @@ jobs:
     needs:
       - validate_package
       - validate_binary
+
+      - create_docker_image
 
 
     name: Publish
