--- a/src/AutoGitSemVer.yaml
+++ b/src/AutoGitSemVer.yaml
@@ -1,4 +1,4 @@
-# This file is used by AutoGitSemVer to configure the semantic version of the PyProjTestBootstrp1 package.
+# This file is used by AutoGitSemVer to configure the semantic version of the pyprojbtstrptest2 package.
 # It indicates that AutoGitSemVer should only look at changes in this directory, its descendants, and files specified in
 # additional_dependencies when calculating the semantic version for the package.
 additional_dependencies:
