--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 # ----------------------------------------------------------------------
 # |
-# |  Copyright (c) 2024 varun narayan
+# |  Copyright (c) 2024 Varun Narayan
 # |  Distributed under the MIT License.
 # |
 # ----------------------------------------------------------------------
@@ -16,13 +16,13 @@ build-backend = "setuptools.build_meta"
 # |
 # ----------------------------------------------------------------------
 [project]
-name = "pyprjbtstrptst"
-description = "python proj test bootstrap"
+name = "pyprjbtsttst1"
+description = "python project bootstrapper test"
 
 license = { text = "MIT" }
 
 authors = [
-    { name = "varun narayan", email = "varun646@gmail.com" },
+    { name = "Varun Narayan", email = "varun646@gmail.com" },
 ]
 
 keywords = [
@@ -70,7 +70,7 @@ Documentation = "https://github.com/varun646/PythonProjectBootstrapperTest"
 Repository = "https://github.com/varun646/PythonProjectBootstrapperTest"
 
 [project.scripts]
-pyprjbtstrptst = "pyprjbtstrptst:EntryPoint.app"
+pyprjbtsttst1 = "pyprjbtsttst1:EntryPoint.app"
 
 
 # ----------------------------------------------------------------------
@@ -169,4 +169,4 @@ python_files = [
 # |
 # ----------------------------------------------------------------------
 [tool.setuptools.dynamic]
-version = { attr = "pyprjbtstrptst.__version__" }
+version = { attr = "pyprjbtsttst1.__version__" }
